<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenu"
    android:orientation="vertical"
    android:background="@drawable/backgroundmenu">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/logo"
            android:background="@drawable/logo"
            android:contentDescription="@string/logocontents" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="50dp"
        android:weightSum="1">

        <Button
            android:layout_width="130dp"
            android:layout_height="42dp"
            android:text="@string/paliosaurus"
            android:id="@+id/playButton"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="30dp"
            android:nestedScrollingEnabled="false"
            android:onClick="locustMauling"
            android:background="@drawable/paper"
            android:textColor="#000001" />

        <Button
            android:layout_width="131dp"
            android:layout_height="41dp"
            android:text="@string/restart"
            android:id="@+id/settingsButton"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:onClick="locustEating"
            android:background="@drawable/paper"
            android:textColor="#000001" />

        <Button
            android:layout_width="135dp"
            android:layout_height="39dp"
            android:text="@string/barneyfelloffatreeanddied"
            android:id="@+id/quitButton"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/paper"
            android:textColor="#000001" />

    </LinearLayout>

    <ImageButton
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:id="@+id/muteButton"
        android:background="@drawable/audio"
        android:contentDescription="@string/audio2"
        android:layout_gravity="right"
        android:onClick="locustPicking" />
</LinearLayout>
