<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="50dp"
        android:weightSum="1"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:text="@string/paliosaurus"
            android:id="@+id/button4"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="30dp"
            android:layout_weight="0.12"
            android:nestedScrollingEnabled="false"
            android:onClick="locustMauling" />

        <Button
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:text="@string/dnd"
            android:id="@+id/button5"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_weight="0.12" />

        <Button
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:text="@string/barneyfelloffatreeanddied"
            android:id="@+id/button6"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_weight="0.12" />
    </LinearLayout>
</LinearLayout>